@@ -7,6 +7,8 @@ version 1.4:
 	* Added: categories management
 	* Enhanced: backend javascript
 	* Added/Changed: translations based on an ini file
+	* Added: option to change the login password
+	* Fixed: security issue
 
 version 1.3 (30/01/2008):
     * Fixed more search-related bugs (thanks to Mitchell Lane <mdlane@alumni.clemson.edu>)
